--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,12 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Environment variables
+.env
 .env.local
+.env.*.local
+
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,3 +27,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Test coverage
+coverage
+.nyc_output
+
